--- a/package.json
+++ b/package.json
@@ -1,15 +1,57 @@
 {
   "name": "ng-qbreadcrumb",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "a breadcrumb component for angular",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clear-lib": "rm -rf lib",
+    "prepublish": "npm run clear-lib && npm run ngc-build",
+    "ngc-build": "ngc -p ./tsconfig-ngc.json"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/qichangjun/ng-qbreadcrumb"
   },
   "author": "qichangjun",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "dependencies": {
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
+    "@angular/cli": "1.7.3",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "dojo-typings": "^1.11.9",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "ts-loader": "~0.8.2",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
+  }
 }
