--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -29,8 +29,7 @@
     "src/index.ts"
   ],
   "exclude": [
-    "node_modules",
-    "demo"
+    "node_modules"
   ],
   "compileOnSave": false,
   "buildOnSave": false,
