--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-/dist
-/tmp
-/out-tsc
 
-# dependencies
+
+/release
 /node_modules
 
 # IDEs and editors
