--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng-qbreadcrumb",
   "version": "1.0.14",
   "description": "a breadcrumb component for angular",
-  "main": "release/index.js",
+  "main": "index.js",
   "scripts": {
     "clear-release": "rm -rf release",
     "prepublish": "npm run clear-release && npm run ngc-build",
